--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ body {
 
 .footer-section {
   flex: 1;
-  min-width: unset;
+  min-width: 150px;
   padding: 1rem;
 }
 
@@ -431,6 +431,7 @@ body {
     width: 150px;
     height: 150px;
   }
+  
 }
 
 @keyframes fadeInBrand {
