--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body.nav-open {
   text-align: right;
   padding: 0.5rem 1rem;
   font-size: 0.9rem;
-  color: #aaa;
+  color: greenyellow;
   position: fixed;
   bottom: 0;
   right: 0;
